# serializer version: 1
# name: test_states[number.downstairs_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 11,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.downstairs_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Volume',
    'platform': 'ring',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'volume',
    'unique_id': '123456-volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[number.downstairs_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Ring.com',
      'friendly_name': 'Downstairs Volume',
      'max': 11,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.downstairs_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2.0',
  })
# ---
# name: test_states[number.front_door_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 11,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.front_door_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Volume',
    'platform': 'ring',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'volume',
    'unique_id': '987654-volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[number.front_door_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Ring.com',
      'friendly_name': 'Front Door Volume',
      'max': 11,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.front_door_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.0',
  })
# ---
# name: test_states[number.front_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 11,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.front_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Volume',
    'platform': 'ring',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'volume',
    'unique_id': '765432-volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[number.front_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Ring.com',
      'friendly_name': 'Front Volume',
      'max': 11,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.front_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '11.0',
  })
# ---
# name: test_states[number.ingress_doorbell_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 8,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.ingress_doorbell_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Doorbell volume',
    'platform': 'ring',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'doorbell_volume',
    'unique_id': '185036587-doorbell_volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[number.ingress_doorbell_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Ring.com',
      'friendly_name': 'Ingress Doorbell volume',
      'max': 8,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.ingress_doorbell_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '8.0',
  })
# ---
# name: test_states[number.ingress_mic_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 11,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.ingress_mic_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Mic volume',
    'platform': 'ring',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'mic_volume',
    'unique_id': '185036587-mic_volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[number.ingress_mic_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Ring.com',
      'friendly_name': 'Ingress Mic volume',
      'max': 11,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.ingress_mic_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '11.0',
  })
# ---
# name: test_states[number.ingress_voice_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 11,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.ingress_voice_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Voice volume',
    'platform': 'ring',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'voice_volume',
    'unique_id': '185036587-voice_volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[number.ingress_voice_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Ring.com',
      'friendly_name': 'Ingress Voice volume',
      'max': 11,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.ingress_voice_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '11.0',
  })
# ---
# name: test_states[number.internal_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 11,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.internal_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Volume',
    'platform': 'ring',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'volume',
    'unique_id': '345678-volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[number.internal_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Ring.com',
      'friendly_name': 'Internal Volume',
      'max': 11,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.internal_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '11.0',
  })
# ---
